2007-10-29 Jim Garlick <garlick@llnl.gov>

	* quota.spec : Change Conflicts: to Obsoletes: [Trent D'Hooge]

	* : tag 1.7

2007-10-22 Jim Garlick <garlick@llnl.gov>

	* META : Change package name to rquota to distinguish this package
	from the Red Hat quota package.

	* quota.spec : Conflicts: quota.

	* : tag 1.6

2006-10-06 Jim Garlick <garlick@llnl.gov>

	* quota.c : Change boolean_t to int (conflict on AIX 5.2).

	* quota.c : Add -t (timeout) option.

	* quota.spec : Comment out BuildRequires: /usr/bin/rpcgen for AIX.

	* quota.spec : Use _mandir and _bindir macros.

	* : tag 1.5

	* NEWS : New.

2006-10-05 Jim Garlick <garlick@llnl.gov>

	* : Migration from CVS to subversion.

	* Make-rpm.mk : Removed (artifact of old build system).

	* quota.c : Added -l (login) option.

	* quota.h : Make /etc/quota.conf the default.

	* ChangeLog : Reformatted.

2003-01-21 Jim Garlick <garlick@llnl.gov>

	* : tag quota-1-4-1

2002-12-08 Jim Garlick <garlick@llnl.gov>

	* : Updated source file headers and DISCLAIMER file according 
	to release instructions.

	* : Ran through "indent --no-tabs -kr *.[ch]" and installed standard
	vi footers.

	* Make-rpm.mk : Updated to latest.

	* : tag quota-1-3-1chaos.

2002-11-19 Jim Garlick <garlick@llnl.gov>

	* ChangeLog : Reformatted

	* COPYING, DISCLAIMER: New.

	* : Updated headers for (c) Regents.

	* quota.c : Check a couple of ignored system call return values.

	* quota.1 : Added BUGS section.

2002-04-29 Jim Garlick <garlick@llnl.gov>

	* quota.c : Cleanup including tear-down of rpc client.

	* quota.c : Added debug flag (-d).

	* : tag quota-1-2-4chaos.

2002-04-23 Jim Garlick <garlick@llnl.gov>

	* quota.spec :  Force /etc/quota.conf.

	* : tag quota-1-2-3chaos.

2002-04-11 Jim Garlick <garlick@llnl.gov>

	* quota.c : Some minor code cleanup.

	* quota.c : Use T/G/K abbreviations in 'file' quota report (GNATS#50)

2002-04-10 Jim Garlick <garlick@llnl.gov>

	* quota.c : Add -f option to read config file from user-specified path.